<resources>
    <string name="app_name">CarAdvertiser</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="advertises">Advertises</string>
    <string name="profile">Profile</string>
    <string name="myAdvertises">My Advertises</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>
